--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#" class="btn">Baixar Curriculo</a>
+                                            <a href="images/cv/CV.pdf" class="btn">Baixar Curriculo</a>
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Contacte-me</a>
                                         </div>
                                     </div>
