--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                     </div>
                     <div class="row">
                         <div class="portfolio-filter padd-15">
-                            <button type="button" class="active" data-filter="all">All</button>
+                            <button type="button" class="active" data-filter="all">Todos</button>
                             <button type="button" data-filter="web-design">Design</button>
                             <button type="button" data-filter="photography">Desenvolvimento Web</button>
                         </div>
