--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <h3>Olá eu sou o <span>Rhuan,</span></h3>
                                     <p> tenho 29 anos, eu sou um rapaz extrovertido, com alta adaptação ao ambiente e contextos em gerais, curioso e sempre em busca de melhorias, novos aprendizados e conquistas. Atualmente trabalho como recepcionista em uma
                                         academia, tendo contato direto com os clientes, realizando o atendimento e o fechamento da venda de planos. Estou me formando em psicologia e revisando conteúdos na área da informática. Apesar de serem áreas distintas
-                                        gosto do bom relacionamento com clientes, realizar bons atendimentos e vendas, assim como me manter atualizado no âmbito tecnológico e psicológico e para utilizar os conhecimentos agregados para o desenvolvimento
+                                        gosto do bom relacionamento com clientes, realizar bons atendimentos e vendas, assim como me manter atualizado no âmbito tecnológico e psicológico, utilizando os conhecimentos agregados para o desenvolvimento
                                         de soluções e formas de facilitar a rotina de trabalho do dia a dia. </p>
                                 </div>
                             </div>
@@ -169,6 +169,13 @@
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
+                                            <h5>Psicologia</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 75%"></div>
+                                                <div class="skill-percent">75%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
                                             <h5>Social Media</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 75%"></div>
@@ -176,7 +183,7 @@
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>Adobe (Photoshop, Ilustrator...)</h5>
+                                            <h5>Pacote Adobe</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 75%"></div>
                                                 <div class="skill-percent">75%</div>
@@ -189,13 +196,7 @@
                                                 <div class="skill-percent">60%</div>
                                             </div>
                                         </div>
-                                        <div class="skill-item padd-15">
-                                            <h5>Psicologia</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 60%"></div>
-                                                <div class="skill-percent">60%</div>
-                                            </div>
-                                        </div>
+                                    
                                     </div>
                                 </div>
                             </div>
@@ -267,7 +268,7 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Repositor - Hortigil Hortifruti S/A</h4>
                                                     <p class="timeline-text">
-                                                        Reposição de produtos no setor de mercearia, frios e laticínios, organização do estoque e da câmara congelada, organização dos produtos no salão de vendas, suporte no setor de rotisseria, padaria e lanchonete e atendimento ao cliente.</p>
+                                                        Reposição de produtos no setor de mercearia, frios e laticínios, organização do estoque e da câmara congelada, organização dos produtos no salão de vendas, suporte no setor de rotisseria, padaria, lanchonete, atendimento ao cliente, fechamento de balanço mensal.</p>
                                                 </div>
                                                 <!-- timeline Item End -->
                                                 <!-- timeline Item -->
@@ -279,7 +280,7 @@
                                                     <h4 class="timeline-title">Manipulador de alimentos - Hortigil Hortifruti S/A</h4>
                                                     <p class="timeline-text">
                                                         Produção dos sucos naturais cumprindo com os requisitos de higienização dos utensílios, polpas e setor, produção das polpas e armazenamento na câmara congelada, organização do setor, higienização do maquinário utilizado (Máquina de espremer laranja e
-                                                        liquidificador industriais), manutenção básica da máquina de espremer laranja, reposição dos sucos na área de vendas e lanchonete e atendimento ao cliente.</p>
+                                                        liquidificador industriais), manutenção básica da máquina de espremer laranja, reposição dos sucos na área de vendas e lanchonete, suporte no setor de alimentos processados e atendimento ao cliente.</p>
                                                 </div>
                                                 <!-- timeline Item End -->
                                                 <!-- timeline Item -->
@@ -290,7 +291,7 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Assistente de vendas - Corporate Languages Cursos LTDA</h4>
                                                     <p class="timeline-text">
-                                                        Atendimento ao cliente de forma ativa e receptiva, tratamento dos clientes, cadastro de alunos, organização de arquivos, fechamento de folha de pagamento dos professores, cobrança dos alunos inadimplentes, organização das salas e horários, estoque e compra
+                                                        Atendimento ao cliente de forma ativa e receptiva, tratamento dos clientes, cadastro de alunos, organização de arquivos, fechamento de folha de pagamento dos professores, cobrança dos alunos inadimplentes, organização das salas e horários, organização e controle de estoque de materiais didáticos, compra
                                                         de materiais didáticos e desenvolvimento de soluções práticas para o dia a dia (planilhas, mala direta, banco de dados de clientes.).</p>
                                                 </div>
                                                 <!-- timeline Item End -->
@@ -322,7 +323,7 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Desenvolvedor Web & Designer (Iniciante)</h4>
                                                     <p class="timeline-text">
-                                                        Desenvolvimento de sites estáticos, cardápios interativos, composição de imagens.</p>
+                                                        Desenvolvimento de sites estáticos, composição de imagens, cardápios interativos, cartão de visita digital e impresso, convites digitais e impressos.</p>
                                                 </div>
                                                 <!-- timeline Item End -->
                                                 <!-- timeline Item -->
@@ -334,7 +335,7 @@
                                                     <h4 class="timeline-title">Representante de eventos - MedGrupo</h4>
                                                     <p class="timeline-text">
                                                         Organização do ambiente de aplicação das aulas, verificação do conteúdo das aulas a serem exibidas, conferência de material e distribuição para os alunos na entrada da sala, atendimento aos alunos, contagem dos materiais distribuídos e verificação da
-                                                        identidade dos alunos.</p>
+                                                        identidade dos alunos e verificação do ambiente da aula.</p>
                                                 </div>
                                                 <!-- timeline Item End -->
                                                 <!-- timeline Item -->
@@ -345,8 +346,8 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Balconista - Distribuidora 63</h4>
                                                     <p class="timeline-text">
-                                                        Atendimento ao cliente, venda de materiais de acordo com a necessidade do cliente, organização da loja, confirmação dos pedidos e recebimentos, emissão de nota fiscal, carga e descarga de materiais de construção, produção de materiais de construção (radie,
-                                                        colunas…) e entrega de materiais.</p>
+                                                        Atendimento ao cliente, venda de materiais de construção de acordo com a necessidade do cliente, organização da loja, confirmação dos pedidos e recebimentos, emissão de nota fiscal, carga e descarga de materiais de construção, produção de materiais de construção (radier,
+                                                        colunas…) e entrega dos materiais.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -381,7 +382,7 @@
                                     <h4 class="blog-title">HammerNit</h4>
                                     <p class="blog-description">Está em busca de um shape sarado, melhorar o condicionamento físico ou até mesmo uma reabilitação física? Conte com a nossa equipe de profissionais para instruir você para o melhor caminho de acordo com o seu objetivo,
                                         contando com aparelhagem topo de linha no ramo fitness.</p>
-                                    <p class="blog-tags">Tags : <a href="https://www.instagram.com/academia_hammer/?hl=pt-br">Instagram</a></p>
+                                    <p class="blog-tags">Tags : <a href="https://www.instagram.com/academia_hammer/?hl=pt-br">Instagram</a>, <a href="https://api.whatsapp.com/send?phone=5521997563481&text=Ol%C3%A1%2C%20gostaria%20de%20algumas%20informa%C3%A7%C3%B5es.">WhatsApp de atendimento</a></p>
                                 </div>
                             </div>
                         </div>
