--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
                                         <div class="info-item padd-15">
                                             <p>Idade : <span>29</span></p>
                                         </div>
-                                        <div class="info-item padd-15">
+                                       <!-- <div class="info-item padd-15">
                                             <p>Email :
                                                 <a href="mailto:rhuanrgualberto@gmail.com"><span>rhuanrgualberto@gmail.com</span></a>
                                             </p>
-                                        </div>
+                                        </div> -->
                                         <div class="info-item padd-15">
                                             <p>Formação : <span>Técnico em informática | Formando em Psicologia </span></p>
                                         </div>
-                                        <div class="info-item padd-15">
+                                        <!-- <div class="info-item padd-15">
                                             <p>Telefone : <a href="tel:+5521980142891"><span>21 98014-2891</span></p></a>
-                                        </div>
+                                        </div> -->
                                         <div class="info-item padd-15">
                                             <p>Cidade : <span>Niterói</span></p>
                                         </div>
@@ -195,8 +195,7 @@
                                                 <div class="progress-in" style="width: 60%"></div>
                                                 <div class="skill-percent">60%</div>
                                             </div>
-                                        </div>
-                                    
+                                        </div>                                    
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +214,7 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Psicologia - Estácio de Sá</h4>
                                                     <p class="timeline-text">
-                                                        Cursando o décimo período do curso de Psicologia através da bolsa de estudos qualificada pelo PROUNI, no horário matutino.</p>
+                                                        Cursando o décimo período em Psicologia através da bolsa de estudos qualificada pelo PROUNI, no horário matutino.</p>
                                                 </div>
                                                 <!-- timeline Item End -->
                                                 <!-- timeline Item -->
