--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="pt-br">
 
 <head>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D5GTE39BBC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D5GTE39BBC');
+</script>
+    
     <title>Rhuan Rodrigues Gualberto </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
